cpp/manager.h

/* 供 C / Python ctypes 调用的统一句柄类型 */
typedef void* tc_player_round_t;
typedef void* tc_hand_manager_t;
/* -------------------- Pattern -------------------- */
int tc_pattern_init(const int hand13[13], Pattern* out);
int tc_pattern_set_position(Pattern* p, int position, const int* cards, int count);
int tc_pattern_get_position(const Pattern* p, int position, int* out_buf);
/* -------------------- 交互管理 -------------------- */
tc_hand_manager_t tc_hand_manager_create(const int hand13[13]);
void tc_hand_manager_destroy(tc_hand_manager_t mgr);
int tc_hand_manager_select_card(tc_hand_manager_t mgr, int idx);
int tc_hand_manager_deselect_card(tc_hand_manager_t mgr, int idx);
int tc_hand_manager_add_to_pile(tc_hand_manager_t mgr, int position, int idx);
int tc_hand_manager_remove_from_pile(tc_hand_manager_t mgr, int position, int idx);
int tc_hand_manager_undo(tc_hand_manager_t mgr);
int tc_hand_manager_pile_full(tc_hand_manager_t mgr, int position);
int tc_hand_manager_submit(tc_hand_manager_t mgr, Pattern* pat);
int tc_hand_manager_get_card_status(tc_hand_manager_t mgr, int idx);
int tc_hand_manager_get_pile_count(tc_hand_manager_t mgr, int position);
int tc_hand_manager_get_pile_card(tc_hand_manager_t mgr, int position, int index);
/* -------------------- Round -------------------- */
int tc_round_deal_players(tc_player_round_t* players, int player_cnt);
int tc_round_close_players(tc_player_round_t* players, int player_cnt);
int tc_player_round_get_shot_count(tc_player_round_t player);
/* -------------------- PlayerStats (历史统计) -------------------- */
typedef void* tc_player_stats_t;
tc_player_stats_t tc_player_stats_create(const char* name);
void tc_player_stats_destroy(tc_player_stats_t stats);
int tc_player_stats_add_round_score(tc_player_stats_t stats, int score);
int tc_player_stats_get_round_count(tc_player_stats_t stats);
int tc_player_stats_get_round_score(tc_player_stats_t stats, int idx);
int tc_player_stats_get_total_score(tc_player_stats_t stats);
unsigned int tc_player_stats_get_achievements(tc_player_stats_t stats);
void tc_player_stats_set_achievements(tc_player_stats_t stats, unsigned int mask);