flutter/lib/src/backend/thirteen/thirteen_ffi.dart


  /// 读取被打枪次数（需在 closePlayers 之后调用）
  static int getShotCount(Pointer<Void> player) {
    final fn = lib.lookupFunction<TcPlayerRoundGetShotCountC,
        TcPlayerRoundGetShotCountDart>('tc_player_round_get_shot_count');
    return fn(player);
  }

  // ================================================================
  //  HandManager 交互分墩 (新增)
  // ================================================================

  /// 创建分墩管理器
  static Pointer<Void> createManager(List<int> hand13) {
    assert(hand13.length == 13);
    final fn =
        lib.lookupFunction<TcHandManagerCreateC, TcHandManagerCreateDart>(
            'tc_hand_manager_create');
    final buf = calloc<Int32>(13);
    for (var i = 0; i < 13; i++) buf[i] = hand13[i];
    final mgr = fn(buf);
    calloc.free(buf);
    return mgr;
  }

  /// 销毁分墩管理器
  static void destroyManager(Pointer<Void> mgr) {
    final fn =
        lib.lookupFunction<TcHandManagerDestroyC, TcHandManagerDestroyDart>(
            'tc_hand_manager_destroy');
    fn(mgr);
  }

  /// 选牌 (UNSELECTED → SELECTED)
  static bool selectCard(Pointer<Void> mgr, int idx) {
    final fn = lib.lookupFunction<TcHandManagerSelectCardC,
        TcHandManagerSelectCardDart>('tc_hand_manager_select_card');
    return fn(mgr, idx) != 0;
  }

  /// 取消选牌 (SELECTED → UNSELECTED)
  static bool deselectCard(Pointer<Void> mgr, int idx) {
    final fn = lib.lookupFunction<TcHandManagerDeselectCardC,
        TcHandManagerDeselectCardDart>('tc_hand_manager_deselect_card');
    return fn(mgr, idx) != 0;
  }

  /// 放入墩位 (SELECTED → IN_PILE)
  static bool addToPile(Pointer<Void> mgr, int position, int idx) {
    final fn =
        lib.lookupFunction<TcHandManagerAddToPileC, TcHandManagerAddToPileDart>(
            'tc_hand_manager_add_to_pile');
    return fn(mgr, position, idx) != 0;
  }

  /// 从墩位移除 (IN_PILE → SELECTED)
  static bool removeFromPile(Pointer<Void> mgr, int position, int idx) {
    final fn = lib.lookupFunction<TcHandManagerRemoveFromPileC,
        TcHandManagerRemoveFromPileDart>('tc_hand_manager_remove_from_pile');
    return fn(mgr, position, idx) != 0;
  }

  /// 撤销上一步操作
  static bool undo(Pointer<Void> mgr) {
    final fn = lib.lookupFunction<TcHandManagerUndoC, TcHandManagerUndoDart>(
        'tc_hand_manager_undo');
    return fn(mgr) != 0;
  }

  /// 查询墩位是否已满
  static bool pileFull(Pointer<Void> mgr, int position) {
    final fn =
        lib.lookupFunction<TcHandManagerPileFullC, TcHandManagerPileFullDart>(
            'tc_hand_manager_pile_full');
    return fn(mgr, position) != 0;
  }

  /// 提交三墩到 Pattern
  static bool submitManager(Pointer<Void> mgr, Pointer<TPattern> pat) {
    final fn =
        lib.lookupFunction<TcHandManagerSubmitC, TcHandManagerSubmitDart>(
            'tc_hand_manager_submit');
    return fn(mgr, pat) != 0;
  }

  /// 查询单张牌状态: 0=UNSELECTED, 1=SELECTED, 2=IN_PILE
  static int getCardStatus(Pointer<Void> mgr, int idx) {
    final fn = lib.lookupFunction<TcHandManagerGetCardStatusC,
        TcHandManagerGetCardStatusDart>('tc_hand_manager_get_card_status');
    return fn(mgr, idx);
  }

  /// 查询墩中牌数
  static int getPileCount(Pointer<Void> mgr, int position) {
    final fn = lib.lookupFunction<TcHandManagerGetPileCountC,
        TcHandManagerGetPileCountDart>('tc_hand_manager_get_pile_count');
    return fn(mgr, position);
  }

  /// 读取墩中指定位置的牌
  static int getPileCard(Pointer<Void> mgr, int position, int index) {
    final fn = lib.lookupFunction<TcHandManagerGetPileCardC,
        TcHandManagerGetPileCardDart>('tc_hand_manager_get_pile_card');
    return fn(mgr, position, index);
  }

  // ================================================================
  //  Round 管理 (新增)
  // ================================================================

  /// DLL 侧洗牌+发牌：所有玩家每人13张
  static int dealPlayers(List<Pointer<Void>> players) {
    final fn = lib.lookupFunction<TcRoundDealPlayersC, TcRoundDealPlayersDart>(
        'tc_round_deal_players');
    final arr = calloc<Pointer<Void>>(players.length);
    for (var i = 0; i < players.length; i++) arr[i] = players[i];
    final rc = fn(arr, players.length);
    calloc.free(arr);
    return rc;
  }

  /// DLL 侧结算：两两比牌→打枪→全垒打→倒水买单→成就解锁
  static int closePlayers(List<Pointer<Void>> players) {
    final fn =
        lib.lookupFunction<TcRoundClosePlayersC, TcRoundClosePlayersDart>(
            'tc_round_close_players');
    final arr = calloc<Pointer<Void>>(players.length);
    for (var i = 0; i < players.length; i++) arr[i] = players[i];
    final rc = fn(arr, players.length);
    calloc.free(arr);
    return rc;
  }

  // ================================================================
  //  Pattern 操作 (新增)
  // ================================================================

  /// 初始化 Pattern
  static Pointer<TPattern> patternInit(List<int> hand13) {
    assert(hand13.length == 13);
    final fn = lib
        .lookupFunction<TcPatternInitC, TcPatternInitDart>('tc_pattern_init');
    final pat = calloc<TPattern>(1);
    final buf = calloc<Int32>(13);
    for (var i = 0; i < 13; i++) buf[i] = hand13[i];
    final rc = fn(buf, pat);
    calloc.free(buf);
    if (rc != 0) {
      calloc.free(pat);
      throw Exception('pattern_init returned $rc');
    }
    return pat;
  }

  /// 设置墩位
  static int patternSetPosition(
      Pointer<TPattern> pat, int position, List<int> cards) {
    final fn =
        lib.lookupFunction<TcPatternSetPositionC, TcPatternSetPositionDart>(
            'tc_pattern_set_position');
    final buf = calloc<Int32>(cards.length);
    for (var i = 0; i < cards.length; i++) buf[i] = cards[i];
    final rc = fn(pat, position, buf, cards.length);
    calloc.free(buf);
    return rc;
  }

  /// 读取墩位牌
  static List<int> patternGetPosition(Pointer<TPattern> pat, int position) {
    final fn =
        lib.lookupFunction<TcPatternGetPositionC, TcPatternGetPositionDart>(
            'tc_pattern_get_position');
    final len = position == 0 ? 3 : 5;
    final buf = calloc<Int32>(len);
    final rc = fn(pat, position, buf);
    if (rc != 0) {
      calloc.free(buf);
      return [];
    }
    final result = [for (var i = 0; i < len; i++) buf[i]];
    calloc.free(buf);
    return result;
  }

  // ================================================================
  //  PlayerStats (历史统计)
  // ================================================================

  /// 创建统计跟踪器
  static Pointer<Void> statsCreate(String name) {
    final fn = lib.lookupFunction<
        Pointer<Void> Function(Pointer<Utf8>),
        Pointer<Void> Function(Pointer<Utf8>)>('tc_player_stats_create');
    final ptr = name.toNativeUtf8();
    final result = fn(ptr);
    calloc.free(ptr);
    return result;
  }

  /// 销毁统计跟踪器
  static void statsDestroy(Pointer<Void> stats) {
    final fn = lib.lookupFunction<
        Void Function(Pointer<Void>),
        void Function(Pointer<Void>)>('tc_player_stats_destroy');
    fn(stats);
  }

  /// 记录一局分数
  static int statsAddRound(Pointer<Void> stats, int score) {
    final fn = lib.lookupFunction<
        Int32 Function(Pointer<Void>, Int32),
        int Function(Pointer<Void>, int)>('tc_player_stats_add_round_score');
    return fn(stats, score);
  }

  /// 局数
  static int statsRoundCount(Pointer<Void> stats) {
    final fn = lib.lookupFunction<
        Int32 Function(Pointer<Void>),
        int Function(Pointer<Void>)>('tc_player_stats_get_round_count');
    return fn(stats);
  }

  /// 第 idx 局的分数
  static int statsRoundScore(Pointer<Void> stats, int idx) {
    final fn = lib.lookupFunction<
        Int32 Function(Pointer<Void>, Int32),
        int Function(Pointer<Void>, int)>('tc_player_stats_get_round_score');
    return fn(stats, idx);
  }

  /// 累计总分
  static int statsTotalScore(Pointer<Void> stats) {
    final fn = lib.lookupFunction<
        Int32 Function(Pointer<Void>),
        int Function(Pointer<Void>)>('tc_player_stats_get_total_score');
    return fn(stats);
  }

  /// 成就位图
  static int statsAchievements(Pointer<Void> stats) {
    final fn = lib.lookupFunction<
        Int32 Function(Pointer<Void>),
        int Function(Pointer<Void>)>('tc_player_stats_get_achievements');
    return fn(stats);
  }

  /// 设置成就位图
  static void statsSetAchievements(Pointer<Void> stats, int mask) {
    final fn = lib.lookupFunction<
        Void Function(Pointer<Void>, Uint32),
        void Function(Pointer<Void>, int)>('tc_player_stats_set_achievements');
    fn(stats, mask);
  }
}
